--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry kind="lib" path="lib/commons-pool2-2.0.jar" sourcepath="D:/tools/mavne/localRepository/org/apache/commons/commons-pool2/2.0/commons-pool2-2.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/jedis-2.6.0.jar" sourcepath="D:/tools/mavne/localRepository/redis/clients/jedis/2.6.0/jedis-2.6.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib/hy.common.tpool.jar"/>
 	<classpathentry kind="lib" path="lib/xjava.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/hy.common.base"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/hy.common.tpool"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
