--- a/src/META-INF/maven/org/hy/common/redis/pom.xml
+++ b/src/META-INF/maven/org/hy/common/redis/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>hy.common.redis</name>
-  <url>https://github.com/HY-ZhengWei/hy.common.redis</url>
+  <url>https://github.com/HY-ZhengWei/hy.common.redis</url>   <!-- https://gitee.com/HY-ZhengWei/hy.common.redis -->
   
   <developers>
     <developer>
@@ -31,20 +31,21 @@
       <scope>test</scope>
     </dependency>
     
-	<!-- https://github.com/HY-ZhengWei/XJava -->
-	<dependency>
-	    <groupId>org</groupId>
-	    <artifactId>hy.common.xjava</artifactId>
-	    <version>4.0.8</version>
-	</dependency>
-	
-	<!--  
-	<dependency>
-	    <groupId>redis.clients</groupId>
-	    <artifactId>jedis</artifactId>
-	    <version>2.6.0</version>
-	</dependency>
-	-->
-	
+    <!-- https://github.com/HY-ZhengWei/XJava -->
+    <!-- https://gitee.com/HY-ZhengWei/XJava -->
+    <dependency>
+        <groupId>org</groupId>
+        <artifactId>hy.common.xjava</artifactId>
+        <version>4.1.1</version>
+    </dependency>
+    
+    <!--  
+    <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+        <version>2.6.0</version>
+    </dependency>
+    -->
+    
   </dependencies>
 </project>
