--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
-encoding/<project>=GBK
-encoding/README.md=UTF-8
+encoding//src/main/java=UTF-8
+encoding//src/main/java/org/hy/common/redis/Redis.java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
+encoding/<project>=UTF-8
