--- a/src/main/resources/META-INF/maven/cn.openapis/hy.common.redis/pom.xml
+++ b/src/main/resources/META-INF/maven/cn.openapis/hy.common.redis/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org</groupId>
     <artifactId>hy.common.redis</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6</version>
     <packaging>jar</packaging>
 
     <name>cn.openapis.hy.common.redis</name>
@@ -74,6 +74,13 @@
         
         <dependency>
             <groupId>cn.openapis</groupId>
+            <artifactId>hy.common.net</artifactId>
+            <version>3.0.5</version>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>cn.openapis</groupId>
             <artifactId>hy.common.xjava</artifactId>
             <version>4.5.1</version>
             <scope>provided</scope>
@@ -83,6 +90,19 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>2.10.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>6.3.2.RELEASE</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.0-alpha-1</version>
+            <scope>provided</scope>
         </dependency>
         
         <dependency>
